--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -6,17 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@constructor/browserslist-config": "1.2.1",
-    "@constructor/configs": "1.8.3",
-    "@constructor/services": "1.73.3",
-    "@constructor/icons": "1.8.0",
-    "@constructor/ui": "1.132.3",
-    "pinia": "2.1.7",
+    "axios": "^1.7.9",
     "ngl": "2.0.2",
-    "postcss": "8.4.39",
+    "pinia": "2.1.7",
     "postcss-html": "1.7.0",
     "postcss-import": "16.1.0",
     "postcss-mixins": "10.0.1",
@@ -28,13 +24,18 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "9.17.0",
-    "typescript": "5.7.2",
+    "postcss": "8.4.39",
+    "prettier": "^3.4.2",
     "stylelint": "16.10.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.2",
     "vite": "6.0.5",
     "vue-tsc": "2.2.0"
   },
   "browserslist": [
-    "extends @constructor/browserslist-config"
+    "last 2 versions",
+    "not dead"
   ]
 }
