--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -22,6 +22,7 @@
     "vue-router": "4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
