--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "ngl": "2.0.2",
     "pinia": "2.1.7",
+    "plotly.js-dist-min": "^2.35.3",
     "postcss-html": "1.7.0",
     "postcss-import": "16.1.0",
     "postcss-mixins": "10.0.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
