--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "ngl": "2.0.2",
-    "pinia": "2.1.7",
+    "pinia": "^2.1.7",
     "plotly.js-dist-min": "^2.35.3",
     "postcss-html": "1.7.0",
     "postcss-import": "16.1.0",
@@ -20,7 +20,8 @@
     "postcss-normalize": "10.0.1",
     "postcss-preset-env": "9.5.15",
     "vue": "3.5.13",
-    "vue-router": "4.4.0"
+    "vue-router": "4.4.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
